# coding-challenges

./: .gitignore  LICENSE  README.md  _config.yml  pylama.ini  requirements.txt
AdventOfCode/2024/: Cargo.toml  README.md  flake.nix  justfile
AdventOfCode/2024/day-10/: Cargo.toml
AdventOfCode/2024/day-10/benches/: criterion.rs
AdventOfCode/2024/day-10/src/: lib.rs  main.rs
AdventOfCode/2024/day-11/: Cargo.toml
AdventOfCode/2024/day-11/src/: main.rs
AdventOfCode/2024/day-12/: Cargo.toml
AdventOfCode/2024/day-12/benches/: criterion.rs
AdventOfCode/2024/day-12/src/: lib.rs  main.rs
AdventOfCode/2024/day-13/: Cargo.toml
AdventOfCode/2024/day-13/benches/: criterion.rs
AdventOfCode/2024/day-13/src/: lib.rs  main.rs
AdventOfCode/2024/day-14/: Cargo.toml
AdventOfCode/2024/day-14/benches/: criterion.rs
AdventOfCode/2024/day-14/src/: lib.rs  main.rs
AdventOfCode/2024/day-15/: Cargo.toml
AdventOfCode/2024/day-15/benches/: criterion.rs
AdventOfCode/2024/day-15/src/: lib.rs  main.rs
AdventOfCode/2024/day-16/: Cargo.toml
AdventOfCode/2024/day-16/benches/: criterion.rs
AdventOfCode/2024/day-16/src/: lib.rs  main.rs
AdventOfCode/2024/day-17/: Cargo.toml
AdventOfCode/2024/day-17/src/: main.rs
AdventOfCode/2024/day-18/: Cargo.toml
AdventOfCode/2024/day-18/benches/: criterion.rs
AdventOfCode/2024/day-18/src/: main.rs
AdventOfCode/2024/day-19/: Cargo.toml
AdventOfCode/2024/day-19/benches/: criterion.rs
AdventOfCode/2024/day-19/src/: main.rs
AdventOfCode/2024/day-20/: Cargo.toml
AdventOfCode/2024/day-20/benches/: criterion.rs
AdventOfCode/2024/day-21/: Cargo.toml
AdventOfCode/2024/day-22/: Cargo.toml  input.txt
AdventOfCode/2024/scripts/: get-aoc-input.rs
AdventOfCode/2024/template/: Cargo.toml
(+167 files in other folders)
