[workspace]
resolver = "2"

members = ["day-*", "util"]
default-members = ["day-*"]

[workspace.dependencies]
clap = { version = "4.2", features = ["derive"] }
nom = "7.1.3"
reqwest = { version = "0.11.22", features=["blocking"] }

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"
