[profile.profiling]
opt-level = 3
inherits = "dev"

[workspace]
members = [
    "day-*",
    "day-21",
    "util",
]
default-members = ["day-*"]
resolver = "2"

[workspace.dependencies]
nom = "7.1.3"
test-log = { version = "0.2.17", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3.0"

[workspace.dependencies.clap]
version = "4.2"
features = ["derive"]

[workspace.dependencies.reqwest]
version = "0.11.22"
features = ["blocking"]
