[package]
name = "day-21"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
criterion = "0.5.1"
# test-log = { workspace = true }
test-log.workspace = true

[[bench]]
name = "criterion"
harness = false
